[package]
name = "strata-bridge-common"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bitcoin.workspace = true
bitcoin-bosd.workspace = true
hex.workspace = true
libp2p.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
secp256k1.workspace = true
serde.workspace = true
strata-l1-txfmt.workspace = true
strata-predicate.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
