[package]
name = "db2"
version = "0.1.0"
edition = "2024"

[dependencies]
strata-bridge-primitives.workspace = true
# strata-bridge-stake-chain.workspace = true

strata-p2p-types.workspace = true

bitcoin = { workspace = true, features = ["rand-std"] }
# rkyv.workspace = true
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
# tracing.workspace = true
foundationdb = { version = "0.10.0", features = ["fdb-7_3"], optional = true }
terrors.workspace = true
serde = { workspace = true, optional = true, features = ["derive"] }

[lints]
workspace = true

[features]
default = ["fdb"]
fdb = ["foundationdb", "serde"]
