[package]
name = "strata-bridge-db2"
version = "0.1.0"
edition = "2024"

[dependencies]
strata-bridge-primitives.workspace = true

bitcoin = { workspace = true, features = ["rand-std"] }
secp256k1 = { workspace = true, features = ["global-context", "rand-std"] }
# TODO: (@Zk2u) switch to fdb 0.11.0 once released
foundationdb = { git = "https://github.com/foundationdb-rs/foundationdb-rs", rev = "7e02f866ff08153f4309a429fc74515c77ea8f07", features = [
  "fdb-7_3",
], optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
terrors.workspace = true

[lints]
workspace = true

[features]
default = ["fdb"]
fdb = ["foundationdb", "serde"]

[dev-dependencies]
proptest.workspace = true
tokio.workspace = true
