[package]
name = "duty-tracker"
version = "0.1.0"
edition = "2021"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage, coverage_nightly)',
] }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[dependencies]
strata-bridge-primitives.workspace = true
strata-bridge-tx-graph.workspace = true

strata-btcio.workspace = true
strata-p2p.workspace = true
strata-p2p-types.workspace = true
strata-p2p-wire.workspace = true
strata-state.workspace = true

bincode = "1.3.3"
bitcoin.workspace = true
btc-notify.workspace = true
futures.workspace = true
musig2.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = "0.1.17"
tracing.workspace = true
