[package]
edition = "2024"
name = "strata-mosaic-client"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
algebra.workspace = true
strata-bridge-primitives.workspace = true
strata-mosaic-client-api.workspace = true

mosaic-rpc-api.workspace = true
mosaic-rpc-types.workspace = true

async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
