[package]
name = "operator-wallet"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
bdk_bitcoind_rpc.workspace = true
bdk_wallet.workspace = true
bitcoin-bosd.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
corepc-node.workspace = true
serial_test.workspace = true
