[package]
name = "strata-bridge-orchestrator"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
btc-tracker.workspace = true
strata-bridge-db2.workspace = true
strata-bridge-exec.workspace = true
strata-bridge-p2p-types2.workspace = true
strata-bridge-p2p-wire.workspace = true
strata-bridge-primitives = { workspace = true, features = ["async"] }
strata-bridge-sm.workspace = true
strata-bridge-tx-graph2.workspace = true

strata-asm-proto-bridge-v1.workspace = true
strata-asm-txs-bridge-v1.workspace = true
strata-p2p.workspace = true

bitcoin.workspace = true
bitcoin-bosd.workspace = true
futures.workspace = true
musig2.workspace = true
rkyv.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
