[package]
edition = "2021"
name = "strata-bridge-p2p-types"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
strata-bridge-primitives.workspace = true

bitcoin.workspace = true
bitcoin-bosd.workspace = true
musig2.workspace = true
proptest.workspace = true
proptest-derive.workspace = true
rkyv.workspace = true
serde.workspace = true

[dev-dependencies]
strata-bridge-test-utils.workspace = true

serde_json.workspace = true
