[package]
edition = "2021"
name = "strata-bridge-p2p-types2"
version = "0.1.0"

[features]
default = []
proptest = ["dep:proptest", "dep:proptest-derive", "dep:serde_json"]

[lints]
workspace = true

[dependencies]
strata-bridge-primitives.workspace = true

bitcoin-bosd.workspace = true
hex.workspace = true
libp2p-identity.workspace = true
musig2.workspace = true
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
rkyv.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }

[dev-dependencies]
secp256k1 = { workspace = true, features = ["rand"] }
strata-bridge-test-utils.workspace = true
