[package]
edition = "2021"
name = "alpen-bridge-params"
version = "0.1.0"

[lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
rust.missing_docs = "warn"
rustdoc.all = "warn"

[dependencies]
bitcoin.workspace = true
bitvm.workspace = true
serde.workspace = true

[dev-dependencies]
toml.workspace = true
