[package]
edition = "2021"
name = "strata-bridge-rpc"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
strata-bridge-primitives.workspace = true
strata-bridge-sm.workspace = true
strata-bridge-tx-graph.workspace = true

strata-primitives.workspace = true

bitcoin.workspace = true
jsonrpsee = { workspace = true, features = ["server", "macros"] }
secp256k1 = { workspace = true, features = ["serde"] }
serde.workspace = true

[features]
default = []
client = ["jsonrpsee/client"]
