[package]
name = "secret-service-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin.workspace = true
kanal.workspace = true
musig2.workspace = true
quinn.workspace = true
rkyv.workspace = true
secret-service-proto = { version = "0.1.0", path = "../secret-service-proto" }
terrors.workspace = true
tokio.workspace = true
tracing.workspace = true
