[package]
name = "secret-service-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin.workspace = true
futures.workspace = true
kanal.workspace = true
musig2 = { path = "../musig2" }
parking_lot.workspace = true
quinn.workspace = true
rkyv.workspace = true
secret-service-proto = { version = "0.1.0", path = "../secret-service-proto" }
strata-bridge-primitives.workspace = true
terrors.workspace = true
tokio.workspace = true
tracing.workspace = true
