[package]
name = "secret-service-server"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
bitcoin.workspace = true
hashbrown = "0.15.2"
musig2.workspace = true
quinn.workspace = true
rkyv.workspace = true
secret-service-proto = { version = "0.1.0", path = "../secret-service-proto" }
strata-bridge-primitives.workspace = true
terrors.workspace = true
tokio.workspace = true
tracing.workspace = true
